[metadata]
name = invokeai
version = 2.2.4.2
# version = attr: example.__version__
author = The InvokeAI Project
author_email = lincoln.stein@gmail.com
url = https://invoke-ai.github.io/InvokeAI/
description = An implementation of Stable Diffusion which provides various new features and options to aid the image generation process
long_description = file: README.md
long_description_content_type = text/markdown
keywords = stable-diffusion, AI
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA
    Environment :: MacOS X
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Artistic Software
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
zip_safe = True
include_package_data = True
# install_requires =
#     pandas == 1.4.1
#     PyYAML >= 6.0
#     typer

[options.package_data]
vendored.clip.clip = *.txt.gz
* = README.md
docs.assets =
    invoke_ai_banner.png
    invoke-web-server-1.png

# [options.entry_points]
# console_scripts =
#     my-example-utility = example.example_module:main

[options.extras_require]
notebook =
    jupyter>=1.0.0
    matplotlib
dev =
    black==22.1.0
    pyflakes==3.0.1
