[metadata]
name = invokeai
version = attr: ldm.invoke.__version__
author = The InvokeAI Project
author_email = lincoln.stein@gmail.com
url = https://invoke-ai.github.io/InvokeAI/
description = An implementation of Stable Diffusion which provides various new features and options to aid the image generation process
long_description = file: README.md
long_description_content_type = text/markdown
keywords = stable-diffusion, AI
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA
    Environment :: MacOS X
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Artistic Software
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
zip_safe = True
include_package_data = True

# [options.package_data]
# vendored.clip.clip = *.txt.gz
# * = README.md
# docs.assets =
#     invoke_ai_banner.png
#     invoke-web-server-1.png
